Bug 1150330 - Don't reply NS_ERROR_FAILURE to avoid IPC code exit unexpectedly, r=brsun, a=2.0m+